Remove jQuery and Snowfall.js; implement pure JavaScript snowfall effect and update event date to December 21st

--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Holiday Cocktail Party Invitation</title>
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto&display=swap" rel="stylesheet">
   
   <!-- Font Awesome for Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-yHmojHP91roN6xw4mwPiy8L1ZSMVgmV1mZCcSfh5D+/dx7/ZfYV1Y0wkhOjxOEEQxcEYvMw+9MwQZb1t6E8Hcw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pV0bX+MnAYHyYkPGR2eC5cZoc3rMQK7Y8rQJ4qwCvmVpujNqKHSN+cH3bblVcl7XU5S0PhmBrN1EUTsqMgvYGw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
   <!-- Animate.css for Animations -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   
   <!-- Custom CSS -->
   <link rel="stylesheet" href="styles.css">
+  <!-- Favicon -->
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
+  <!-- Snowfall Canvas -->
+  <canvas id="snowfall-canvas"></canvas>
+  
   <div class="container">
     <header class="animate__animated animate__fadeInDown">
       <h1>You're Invited!</h1>
@@ -73,12 +78,6 @@
       </div>
     </footer>
   </div>
-  
-  <!-- jQuery (Required for Snowfall.js) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YeXLhC1+6QO13uv5wCAX07u5uDweQyNyoq3gK+7t5huJJ1f1sc1+8/3q4a5fN/4RX6fIvJbvo7XKlvT8/Uw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  
-  <!-- Snowfall.js for Snow Effect -->
-  <script src="https://cdn.jsdelivr.net/gh/loktar00/JQuery-Snowfall@master/snowfall.jquery.min.js"></script>
   
   <!-- Custom JavaScript -->
   <script src="script.js"></script>
