Integrate RSVP form with Formspree and add thank you page

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <label for="email">Email:</label>
           <input type="email" id="email" name="_replyto" placeholder="your.email@example.com" required>
           
-          <input type="hidden" name="_next" value="thankyou.html">
-
+          <input type="hidden" name="_next" value="https://mlounello.github.io/holiday-cocktail-invitation/thankyou.html">
+          
           <button type="submit">Submit</button>
         </form>
       </section>
