Update bios for Louis and Phinnaeus; reorder hosts with Louis first and fix alignment

--- a/index.html
+++ b/index.html
@@ -48,18 +48,28 @@
     <section id="about-dogs" class="animate__animated animate__fadeInUp" aria-labelledby="about-dogs-heading">
       <h2 id="about-dogs-heading"><i class="fas fa-paw"></i> Meet Our Hosts</h2>
       <div class="dogs">
-        <!-- Host 1: Phinnaeus -->
+        <!-- Host 1: Louis Longfellow -->
         <div class="dog-host">
-          <img src="assets/images/phinnaeus.jpg" alt="Phinnaeus the Golden Retriever, the cheerful host of our holiday party">
-          <h3>Phinnaeus</h3>
-          <p>Phinnaeus, our spirited Golden Retriever, loves to greet guests with his wagging tail and warm hugs. His playful nature ensures a lively atmosphere throughout the evening.</p>
+          <img src="assets/images/louis.jpg" alt="Louis Longfellow, the playful and mischievous Cardigan Corgi, host of our holiday party">
+          <h3>Louis Longfellow</h3>
+          <p>
+            Louis Longfellow is a 9-year-old black and white Cardigan Corgi who loves to lay on his back and make snow angels in the winter. In the summer, he refuses to leave the beach and is an expert at fake swimming—walking in the water on his tippy toes as if he’s truly swimming. An avid paddleboarder, Louis is also a dedicated working dog tasked with keeping his brother Phinnaeus and Uncle Cooper away from anything suspicious within a 5-mile radius of the house.
+          </p>
+          <p>
+            Louis loves belly rubs and being petted, but only by one person at a time. Don’t let his small size fool you—he keeps everyone in line. Louis enjoys playing fetch and will let YOU know when it’s time to stop. He finds enjoyment in setting up his brother to get in trouble and then watching him get yelled at. Additionally, Louis loves a good prank on the humans. This is Louis’s world, and we are all just guests.
+          </p>
         </div>
         
-        <!-- Host 2: Louis -->
+        <!-- Host 2: Phinnaeus Underfoot -->
         <div class="dog-host">
-          <img src="assets/images/louis.jpg" alt="Louis the Cardigan Corgi, the wise and charming host of our holiday gathering">
-          <h3>Louis</h3>
-          <p>Louis, our charming Cardigan Corgi, brings a touch of elegance and wisdom to the party. His calm demeanor balances Phinnaeus's energy, creating a perfect harmony.</p>
+          <img src="assets/images/phinnaeus.jpg" alt="Phinnaeus Underfoot, the lively and spirited Golden Retriever, host of our holiday party">
+          <h3>Phinnaeus Underfoot</h3>
+          <p>
+            Phinnaeus Underfoot is a lively and spirited 5-year-old Golden Retriever, known for greeting guests with his wagging tail and warm hugs. He loves to talk and can’t resist howling along with the fire whistle, always approaching everything with boundless energy.
+          </p>
+          <p>
+            Phinnaeus often finds himself in trouble, thanks to his older brother Louis. His affectionate nature shines through as he adores cuddling and playfully holding hands. When Phinnaeus sets his sights on something, he becomes both sneaky and calculated, skillfully figuring out the best way to achieve his desires. Beyond his playful antics, Phinnaeus is a dedicated worker who loves spending time in the garden, picking peppers and digging holes.
+          </p>
         </div>
       </div>
     </section>
