Update titles and descriptions

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     
     <!-- Header Section -->
     <header class="animate__animated animate__fadeInDown">
-      <h1>Holiday Cocktail Party <i class="fas fa-snowflake"></i></h1>
-      <p>Join us for an evening of festive cheer!</p>
-    </header>
+        <h1>Cocktails, Conversations, and Canine Hospitality <i class="fas fa-snowflake"></i></h1>
+        <p>Ever the refined connoisseurs of good taste, Louis Longfellow and Phinnaeus Underfoot are delighted to host you for an evening of cocktails, conversations, and good company. They assure you a night of charm and hospitality—with just a small request for treats or belly rubs should you seek to truly impress.</p>
+      </header>
     
     <!-- Event Details Section -->
     <section id="details" class="animate__animated animate__fadeInUp" aria-labelledby="details-heading">
