Update TITLE and ICON

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <title>Holiday Cocktail Party Invitation | Celebrate with Us!</title>
+  <title>Cocktails, Conversations, and Canine Hospitality</title>
   
   <!-- Meta Description for SEO -->
   <meta name="description" content="Join us for a festive Holiday Cocktail Party! Enjoy delightful cocktails, great company, and holiday cheer at our celebration. RSVP now!">
@@ -21,6 +21,9 @@
   
   <!-- Custom CSS -->
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
   
