Updated Cooper Bio

--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
         </div>
       </div>
     </section>
+    <section id="special-guest" class="animate__animated animate__fadeInUp" aria-labelledby="special-guest-heading">
+        <h2 id="special-guest-heading"><i class="fas fa-crown"></i> With Special Guest Appearance By</h2>
+        <div class="guest">
+          <img src="assets/images/cooper.jpg" alt="Uncle Cooper, the gentle giant Golden Retriever, and special guest">
+          <h3>Uncle Cooper</h3>
+          <p>
+            Uncle Cooper is a 10-year-old Golden Retriever and the beloved uncle of our two hosts. Towering like a lion and seemingly made of Velcro, Cooper is the true leader of the pack, even while letting the boys believe they’re in charge. A gentle giant, Cooper loves to swim (though drying off takes days) and never goes anywhere without his favorite ball.
+          </p>
+          <p>Cooper is capable of drinking all the water in the Village of Colonie in one sitting and works hard to keep everyone warm with his heavy breathing. Known as the ‘Good Boy,’ Cooper uses his reputation to sneak extra food whenever possible. His tail could knock you over, but it never stops wagging. He doesn’t know his own strength, but his constant happiness more than makes up for it.</p>
+        </div>
+      </section>
     
     <!-- RSVP Section -->
     <section id="rsvp" class="animate__animated animate__fadeInUp" aria-labelledby="rsvp-heading">
