Fixed url in all.min.css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 
   <!-- all.min.css -->
-  <link rel="stylesheet" href="/path/to/css/all.min.css">
+  <link rel="stylesheet" href="assets/fontawesome/all.min.css">
 </head>
 <body>
   
