Fixed url in all.min.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <meta name="description" content="Join us for a festive Holiday Cocktail Party! Enjoy delightful cocktails, great company, and holiday cheer at our celebration. RSVP now!">
   
   <!-- Font Awesome for Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pIH+VCOt6YoULJIo7+MQLczQIrPNzj0V5UV/dK1u+Zl4P1M6z1xCAXxkkjPp58MRHRxEjkNs+FffJJcU3G8ZBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
